[package]
name = "berlinweb"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
axum-server = { version = "0.8", features = ["tls-rustls"] }
axum-extra = { version = "0.12", features = ["cookie"] }
tokio = { version = "1.0", features = ["full"] }
tokio-util = {version = "0.7"}
futures = "0.3"
futures-util = "0.3" 
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
once_cell ={ version = "1.21"}
berlinproto = { path = "../berlinproto" }